# HelloTravis

./: .travis.yml  CMakeLists.txt  README.md
src/: hello.cpp
test/: CMakeLists.txt  hello_test.cpp
